compose: Fix alignment of Drafts button.
Fixes #17095.

--- a/static/styles/compose.css
+++ b/static/styles/compose.css
@@ -7,6 +7,7 @@
         .button.small {
             font-size: 1em;
             padding: 3px 10px;
+            vertical-align: middle;
         }
 
         .compose_mobile_button {
